--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <section class="design__layout">
         <div class="container">
           <nav class="nav">
-            <div class="nav__menu">
+            <ul class="nav__menu">
               <li><a href="index.html">HOME</a> </li>
               <li>ABOUT</li>
               <li>WORKS</li>
               <li>PROCESS</li>
               <li>CONTACTS</li>
-            </div>  
+            </ul>  
           </nav>
           <div class="design">
             <div class="design__body">
