--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,500" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/nullstyle.css" />
     <title>Design and Layout</title>
   </head>
@@ -24,7 +24,7 @@
           <div class="design">
             <div class="design__body">
               <h1 class="design__title">Design and Layout</h1>
-              <div class="design__text text">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</div>
+              <div class="design__text">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</div>
               <button class="design__button">WRITE TO ME</button>
             </div>
           </div>
@@ -33,12 +33,12 @@
       <section class="about">
         <div class="container">
           <div class="about__body">
-            <div class="about__title title">About Me</div>
-            <div class="about__text text">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</div>
+            <div class="about__title">About Me</div>
+            <div class="about__text">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</div>
           </div>
         </div>
       </section>
-      <section class="projects bgc__color">
+      <section class="projects">
         <div class="container">
           <div class="projects__body">
             <div class="projects__item">
@@ -65,8 +65,8 @@
       <section class="work">
         <div class="container">
           <div class="work__body">
-            <div class="work__title title"> How I Work</div>
-            <div class="work__text text">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</div>
+            <div class="work__title"> How I Work</div>
+            <div class="work__text">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</div>
             <div class="work__content">
               <img src="./img/Rectangle-5.png" alt="video" class="work__video" >
               <img src="./img/play-button.svg" alt="" class="work__play-btn">
@@ -75,7 +75,7 @@
         </div>
       </section>
       <footer class="footer">
-        <div class="copyrights bgc__color">
+        <div class="copyrights">
           <div class="container">
             <div class="copyrights__body">
               <div class="copyrights__title">Ostap Ivanenko</div>
